ajustes altura e largura página de login, header e organização do feedback

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,9 +21,10 @@
   display: flex;
   justify-content: space-around;
   margin-right: 5px;
+  max-width: fit-content;
+  min-width: 200px;
   padding: 5px;
   padding-right: 16px;
-  width: 200px;
 }
 
 .area-header-player {
