--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -1,11 +1,3 @@
-.correctAnswer {
-  border: 3px solid rgb(6, 240, 15);
-}
-
-.incorrectAnswer {
-  border: 3px solid red;
-}
-
 .game-area {
   align-items: center;
   background-image: url('https://i0.wp.com/www.coliseugeek.com.br/wp-content/uploads/2021/07/Papel-de-parede-gamer-4k-para-seu-pc-15-1024x576.png?resize=880%2C495');
@@ -24,28 +16,67 @@
   border-radius: 1em;
   display: flex;
   flex-flow: row wrap;
-  height: 70%;
   justify-content: space-around;
+  max-height: 90%;
+  max-width: 45%;
+  min-height: 70%;
   padding: 20px;
   text-align: center;
-  width: 45%;
 }
 
 .question-area {
   display: flex;
   flex-direction: column;
-  max-height: 60%;
+  max-height: 70%;
+  min-height: 50%;
   width: 90%;
+}
+
+.resposta {
+  max-height: 70px;
+  min-height: 50px;
+  text-align: center;
+}
+
+.resposta:hover {
+  background-color: rgba(60, 225, 237, 0.555);
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.correctAnswer {
+  background-color: rgba(60, 225, 237, 0.555);
+  border: 3px solid rgb(6, 240, 15);
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  max-height: 70px;
+  min-height: 50px;
+  text-align: center;
+}
+
+.incorrectAnswer {
+  background-color: #9d3ced8a;
+  border: 3px solid red;
+  color: rgba(255, 255, 255, 0.623);
+  font-size: 15px;
+  font-weight: 600;
+  max-height: 70px;
+  min-height: 50px;
+  text-align: center;
 }
 
 button {
   background-color: #9e3ced;
-  border-radius: 1em;
+  border-radius: 2em;
   border-style: none;
   color: white;
-  height: 50px;
-  margin: 10px;
-  width: 170px;
+  font-size: 15px;
+  font-weight: 500;
+  min-height: 35px;
+  padding: 5px;
+  text-align: center;
+  width: 190px;
 }
 
 .right-elements {
@@ -55,10 +86,18 @@ button {
 }
 
 /* Botões do fedback junto */
-button .btn-next, .btn-ranking, .btn-play-again {
+.btn-next, .btn-ranking, .btn-play-again {
   background-color: #9e3ced;
-  color: whitesmoke;
+  color: white;
   font-weight: 600;
+}
+
+.btn-play-again {
+  margin-right: 10px;
+}
+
+.btn-feedback {
+  margin-top: 30px;
 }
 
 .timer-area {
@@ -72,20 +111,26 @@ button .btn-next, .btn-ranking, .btn-play-again {
   background-size: 100%;
   display: flex;
   flex-direction: column;
-  height: 74.6vh;
-  padding-top: 50px;
+  height: 100vh;
+  justify-content: center;
 }
 
 .feedback {
+  background-color: #9d3ced96;
+  border-radius: 1em;
+  padding: 5px;
   text-align: center;
+  width: 100%;
 }
 
 .details-feedback {
   background-color: #0d577485;
   border-radius: 1em;
   color: white;
+  display: flex;
+  flex-direction: column;
   max-width: 60%;
   min-width: 35%;
   padding: 15px;
-  text-align: left;
+  text-align: center;
 }
